syntax = "proto3";

package server;

option go_package = "crypt/generated";

service CryptoService {
  // ListCryptoCurrencies получение списка криптовалют
  rpc ListCryptoCurrencies(ListCryptoCurrenciesRequest) returns (ListCryptoCurrenciesResponse){};
}

message ListCryptoCurrenciesRequest {
  CryptoFilter filter = 1;
}

message CryptoFilter {
  string cryptoexchange_name = 1;
  double price_from = 2;
  double price_to = 3;
  bool find_brush = 4;
}

message ListCryptoCurrenciesResponse {
  repeated CryptoCurrency currencies = 1;
}

message CryptoCurrency {
  int32 cryptocurrency_id = 1;
  string cryptocurrency_ticker = 2;
  repeated CryptoCurrencyInfo data = 3;
}

message CryptoCurrencyInfo {
  string cryptoexchange_name = 1;
  bytes olhcv = 2;
  double last = 3;
  double spread = 4;
}
